# multimidia

./: .gitignore  README.md  nul  pyproject.toml
UI/: index.html  package-lock.json  package.json  vite.config.ts
UI/src/: App.css  App.tsx  index.css
UI/src/components/: Cards.css  Editor.css  Footer.css  Footer.tsx  Header.css  Header.tsx  NarrationCard.tsx  StyleEditor.tsx  SubtitleDisplay.tsx  SubtitleList.tsx  VideoCard.tsx  VideoEditor.tsx  VideoPlayer.tsx
UI/src/features/narracao/: AddInterlocutorModal.tsx  AudioPlayer.tsx  Narracao.css  Narracao.tsx  toast.tsx  types.ts  voiceData.ts
multimidia/: package-lock.json  package.json
multimidia/public/: index.html
multimidia/src/: App.jsx  index.css  index.js
multimidia/src/componentes/: AudioPlayer.jsx  BannerRecursos.jsx  Cabecalho.jsx  CardConfiguracoes.jsx  CardDialogos.jsx  CardInterlocutores.jsx  DialogoItem.jsx  InterlocutorItem.jsx  Layout.jsx  ModalAdicionarInterlocutor.jsx  Recurso.jsx  SecaoAudio.jsx  SecaoVideo.jsx  Toast.jsx
multimidia/src/paginas/: PaginaNarracao.jsx  PaginaPrincipal.jsx
src/: env.py  main.py
src/models/: subtitle.py
src/routes/: subtitle.py
src/services/: diarization.py  rendering.py  subtitle.py  transcription.py
